split game_2 around player switch and clean dense scores.

--- a/VideoLabellingTools/graphdensegames.ipynb
+++ b/VideoLabellingTools/graphdensegames.ipynb
@@ -321,8 +321,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "41e245cf-88bb-4e03-9085-315ceb081362",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Updated /opt/dlami/nvme/opentt_data/CreateOpenTTScoreLabels/VideoLabellingTools/labels/densified_scores/game_2b_scores.csv (frames 149900-150500 set to 5-3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#!/usr/bin/env python3\n",
+    "\"\"\"\n",
+    "overwrite_scores.py\n",
+    "\n",
+    "Directly overwrite scores in a CSV for a given frame range. This is because some of the scores flip because players switch sides.\n",
+    "\"\"\"\n",
+    "\n",
+    "import csv\n",
+    "from pathlib import Path\n",
+    "\n",
+    "csv_path = Path(\"/opt/dlami/nvme/opentt_data/CreateOpenTTScoreLabels/VideoLabellingTools/labels/densified_scores/game_2b_scores.csv\")\n",
+    "\n",
+    "start_frame = 149900\n",
+    "end_frame   = 150500\n",
+    "new_score   = \"5-3\"\n",
+    "\n",
+    "rows = []\n",
+    "with open(csv_path, newline=\"\") as f:\n",
+    "    reader = csv.DictReader(f)\n",
+    "    for row in reader:\n",
+    "        fr = int(row[\"frame\"])\n",
+    "        if start_frame <= fr <= end_frame:\n",
+    "            row[\"score\"] = new_score\n",
+    "        rows.append(row)\n",
+    "\n",
+    "with open(csv_path, \"w\", newline=\"\") as f:\n",
+    "    writer = csv.DictWriter(f, fieldnames=[\"frame\", \"score\"])\n",
+    "    writer.writeheader()\n",
+    "    writer.writerows(rows)\n",
+    "\n",
+    "print(f\"✅ Updated {csv_path} (frames {start_frame}-{end_frame} set to {new_score})\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "536a74bb-ecbb-4018-8e86-036dfaa644c9",
    "metadata": {},
    "outputs": [],
    "source": []
